--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "next": "14.1.0",
     "next-intl": "^3.5.3",
     "react": "^18",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
