--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "emailjs-com": "^3.2.0",
+        "libphonenumber-js": "^1.11.14",
         "next": "14.1.0",
         "next-intl": "^3.5.3",
         "react": "^18",
         "react-chrono": "^2.6.1",
         "react-dom": "^18",
         "react-icons": "^5.3.0",
+        "react-phone-number-input": "^3.4.9",
         "sharp": "^0.33.5"
     },
     "devDependencies": {
