--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18",
         "react-icons": "^5.3.0",
         "react-phone-number-input": "^3.4.9",
+        "rimraf": "^6.0.1",
         "sharp": "^0.33.5"
     },
     "devDependencies": {
